--- a/style/main.css
+++ b/style/main.css
@@ -14,10 +14,11 @@
     display: flex;
     flex-direction: column;
     gap: 50px;
-    border: 4px solid brown;
-    color: brown;
+    border: 4px solid blue;
+    color: white;
+    text-shadow: 0 0 1px blue;
     font-family: sans-serif;
-    background-color: rgb(248, 221, 221);
+    background-color: rgb(177, 182, 255);
     border-radius: 30px;
     padding: 50px 150px 50px 150px;
     align-self: center;
@@ -40,7 +41,7 @@ input{
     align-self: center;
     width: 300px;
     height: 30px;
-    border: 4px solid brown;
+    border: 4px solid blue;
     border-radius: 10px;
     padding: 5px 10px 5px 10px;
     font-size: x-large;
@@ -53,7 +54,7 @@ input{
 
 .signButton{
     align-self: center;
-    background-color: brown;
+    background-color: blue;
     color: white;
     padding: 20px 50px 20px 50px;
     border-radius: 15px;
@@ -67,4 +68,30 @@ input{
 .signButton:hover{
     background-color: rgb(193, 97, 97);
     transition: background-color 0.2s;
+}
+
+.showTableButton{
+    align-self: center;
+    background-color: blue;
+    color: white;
+    padding: 20px 50px 20px 50px;
+    border-radius: 15px;
+    font-size: larger;
+    font-family: sans-serif;
+    font-weight: bold;
+    transition: background-color 0.2s;
+    cursor: pointer;
+}
+
+.showTableButton:hover{
+    background-color: rgb(193, 97, 97);
+    transition: background-color 0.2s;
+}
+
+.DBTable{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    border: 2px solid blue;
+    border-radius: 10px;
+    opacity: 0;
 }
